--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
-    "redux": "^4.0.1",
+    "redux": "^4.0.5",
     "redux-saga": "^1.0.2",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "typesafe-actions": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,7 +36,16 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^25.1.4",
+    "@types/node": "^12.12.31",
+    "@types/react": "^16.9.26",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/redux-saga": "^0.10.5",
+    "@types/styled-components": "^5.0.1",
     "gulp": "^4.0.2",
-    "gulp-sass": "^4.0.2"
+    "gulp-sass": "^4.0.2",
+    "typescript": "^3.8.3"
   }
 }
