--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "sass": "gulp watch"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,16 +35,23 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^10.0.2",
+    "@types/enzyme": "^3.10.5",
     "@types/jest": "^25.1.4",
     "@types/node": "^12.12.31",
     "@types/react": "^16.9.26",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
+    "@types/redux-mock-store": "^1.0.2",
     "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.0.1",
-    "gulp": "^4.0.2",
-    "gulp-sass": "^4.0.2",
+    "cypress": "^4.3.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "react-test-renderer": "^16.13.1",
+    "redux-mock-store": "^1.5.4",
+    "supertest": "^4.0.2",
     "typescript": "^3.8.3"
   }
 }
