--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.7.0",
     "@testing-library/react": "^10.0.2",
     "@types/enzyme": "^3.10.5",
     "@types/jest": "^25.1.4",
