--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test:watch": "react-scripts test",
+    "test:coverage": "react-scripts test --coverage --watchAll=false",
+    "test:coveralls": "react-scripts test --coverage --watchAll=false && coveralls < coverage/lcov.info",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -47,6 +49,7 @@
     "@types/redux-mock-store": "^1.0.2",
     "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.0.1",
+    "coveralls": "^3.1.0",
     "cypress": "^4.3.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
