--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-sass": "^4.14.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
@@ -55,7 +56,6 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "react-test-renderer": "^16.13.1",
     "redux-mock-store": "^1.5.4",
-    "supertest": "^4.0.2",
     "typescript": "^3.8.3"
   }
 }
