--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:watch": "react-scripts test",
     "test:coverage": "react-scripts test --coverage --watchAll=false",
     "test:coveralls": "react-scripts test --coverage --watchAll=false && coveralls < coverage/lcov.info",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "node_modules/cypress/bin/cypress open"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -47,13 +48,15 @@
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-test-renderer": "^16.9.2",
     "@types/redux-mock-store": "^1.0.2",
     "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.0.1",
     "coveralls": "^3.1.0",
-    "cypress": "^4.3.0",
+    "cypress": "^4.5.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "jest-styled-components": "^7.0.2",
     "react-test-renderer": "^16.13.1",
     "redux-mock-store": "^1.5.4",
     "typescript": "^3.8.3"
