--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "jest-styled-components": "^7.0.2",
     "react-test-renderer": "^16.13.1",
     "redux-mock-store": "^1.5.4",
+    "redux-saga-test-plan": "^4.0.0-rc.3",
     "typescript": "^3.8.3"
   }
 }
