--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,17 @@ language: node_js
 node_js:
   - node
   - lts/*
+addons:
+  apt:
+    packages:
+      # Ubuntu 16+ does not install this dependency by default, so we need to install it ourselves
+      - libgconf-2-4
+install:
+  - yarn install --frozen-lockfile
 script:
   - yarn run test:coveralls
+  - yarn run cy:start
+  - yarn run cy:test
 branches:
   only:
     - master
@@ -11,3 +20,4 @@ cache:
   yarn: true
   directories:
     - node_modules
+    - ~/.cache
