--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
       "dom.iterable",
       "esnext"
     ],
+    "types": [
+      "cypress"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -22,7 +25,9 @@
   },
   "include": [
     "./src/**/*",
-    "./config.d.ts"
+    "./config.d.ts",
+    "./node_modules/cypress",
+    "cypress/**/*.js"
   ],
   "extends": "./tsconfig.paths.json"
 }
