--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "star-wars",
-  "version": "0.1.0",
+  "version": "1.0.10",
   "private": true,
   "dependencies": {
     "node-sass": "^4.14.1",
@@ -8,20 +8,23 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.0.1",
+    "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.0.2",
     "styled-components": "^5.0.1",
     "typesafe-actions": "^5.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test:watch": "react-scripts test",
-    "test:coverage": "react-scripts test --coverage --watchAll=false",
-    "test:coveralls": "react-scripts test --coverage --watchAll=false && coveralls < coverage/lcov.info",
+    "lint": "tsc --noEmit && eslint src/**/*.{js,ts}{,x}",
+    "format": "prettier --write src/**/*.{js,ts}{,x}",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --silent",
+    "test:coverage": "yarn test --coverage --watchAll=false",
+    "test:coveralls": "yarn test:coverage && coveralls < coverage/lcov.info",
     "eject": "react-scripts eject",
-    "cypress:open": "node_modules/.bin/cypress open"
+    "cy:start": "yarn start & yarn wait-on http://localhost:3000/",
+    "cy:test": "yarn cypress run --record"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,9 +42,12 @@
     ]
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.11.5",
+    "@babel/eslint-plugin": "^7.11.5",
+    "@commitlint/cli": "^9.1.2",
+    "@commitlint/core": "^9.1.2",
     "@testing-library/jest-dom": "^5.7.0",
     "@testing-library/react": "^10.0.2",
-    "@types/enzyme": "^3.10.5",
     "@types/jest": "^25.1.4",
     "@types/node": "^12.12.31",
     "@types/react": "^16.9.26",
@@ -52,14 +58,28 @@
     "@types/redux-mock-store": "^1.0.2",
     "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.0.1",
+    "babel-plugin-root-import": "^6.5.0",
+    "commitizen": "^4.2.1",
+    "commitlint-config-gitmoji": "^1.0.1",
     "coveralls": "^3.1.0",
+    "customize-cra": "^1.0.0",
     "cypress": "^4.5.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
+    "cz-emoji": "^1.2.2",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "7.20.0",
+    "eslint-plugin-react-hooks": "4.0.0",
+    "husky": "^4.2.5",
     "jest-styled-components": "^7.0.2",
+    "lint-staged": "^10.3.0",
+    "prettier": "^2.1.1",
+    "react-app-rewired": "^2.1.6",
     "react-test-renderer": "^16.13.1",
     "redux-mock-store": "^1.5.4",
     "redux-saga-test-plan": "^4.0.0-rc.3",
-    "typescript": "^3.8.3"
+    "typescript": "^3.4.5",
+    "wait-on": "^5.2.0"
   }
 }
