--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,33 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES6",
     "lib": [
       "dom",
       "dom.iterable",
       "esnext"
     ],
+    "types": [
+      "cypress"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
+    "strict": false,
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "baseUrl": "src"
   },
   "include": [
-    "src"
-  ]
+    "./src/**/*",
+    "./config.d.ts",
+    "./node_modules/cypress",
+    "cypress/**/*.js"
+  ],
+  "extends": "./tsconfig.paths.json"
 }
