:green_heart: (coveralls) Fix coveralls 422
Moving coveralls script to `after_success` as probable solution to #13

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,11 @@ addons:
 install:
   - yarn install --frozen-lockfile
 script:
-  - yarn run test:coveralls
+  - yarn run test:coverage
   - yarn run cy:start
   - yarn run cy:test
+after_success:
+  - yarn run test:coveralls
 branches:
   only:
     - master
