--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --silent",
     "test:coverage": "yarn test --coverage --watchAll=false",
-    "test:coveralls": "yarn test:coverage && coveralls < coverage/lcov.info",
+    "test:coveralls": "yarn coveralls < coverage/lcov.info",
     "eject": "react-scripts eject",
     "cy:start": "yarn start & yarn wait-on http://localhost:3000/",
     "cy:test": "yarn cypress run --record"
